tests/snapshots/test_input_errors_update__missing_empty_fields-2.snap
---
source: tests/test_input_errors_update.rs
expression: lower_level_result.unwrap_err()
---
`name`@`song` is required but is empty. 
Required fields: ["artist_id","id","name"]
