tests/snapshots/test_input_errors_update__missing_empty_fields.snap
---
source: tests/test_input_errors_update.rs
expression: result.unwrap_err()
---
`name`@`song` is required but is empty. 
Required fields: ["artist_id","id","name"]
Default value of 'name': Some(Text(""))
Also, because `default_if_absent` is true, absent fields, if any, will be assigned with corresponding default values before being checked
