tests/snapshots/test_input_errors_update__wrong_table.snap
---
source: tests/test_input_errors_update.rs
expression: result.unwrap_err()
---
Table 'wrong_table' not found in schema family. 
Available tables are: album, artist, rel_album_song, song
