tests/snapshots/test_input_errors_update__wrong_type_fields-2.snap
---
source: tests/test_input_errors_update.rs
expression: result.unwrap_err()
---
Failed to convert JSON value to 'Real' for column 'price'. The input JSON value was: "ninety-nine"
